--- a/site/index1.html
+++ b/site/index1.html
@@ -47,21 +47,21 @@
   <!-- Photo grid -->
   <div class="w3-row">
     <div class="w3-third">
-      <img src="DALL·E 2023-03-24 10.58.32 - 8 bit interior of a gloomy castle with ghosts and skeletons.png" onclick="onClick(this)" alt="">
+      <img src="dall-e7.png" onclick="onClick(this)" alt="">
       <img src="" onclick="onClick(this)" alt="">
       <img src="" onclick="onClick(this)" alt="">
     </div>
 
     <div class="w3-third">
-      <img src="DALL·E 2023-03-25 22.36.51 - cyber punk skulls and skeletons and cats.png" onclick="onClick(this)" alt="">
-      <img src="/w3images/man_bench.jpg" onclick="onClick(this)" alt="">
-      <img src="/w3images/natureboy.jpg" onclick="onClick(this)" alt="">
+      <img src="dall-e8.png" onclick="onClick(this)" alt="">
+      <img src="" onclick="onClick(this)" alt="">
+      <img src="" onclick="onClick(this)" alt="">
     </div>
 
     <div class="w3-third">
-      <img src="DALL·E 2023-03-25 22.36.40 - cyber punk skulls and skeletons and cats.png" onclick="onClick(this)" alt="">
-      <img src="/w3images/girl_train.jpg" onclick="onClick(this)" alt="">
-      <img src="/w3images/closegirl.jpg" onclick="onClick(this)" alt="">
+      <img src="dall-e9.png" onclick="onClick(this)" alt="">
+      <img src="" onclick="onClick(this)" alt="">
+      <img src="" onclick="onClick(this)" alt="">
     </div>
   </div>
 
@@ -106,7 +106,7 @@
         Nel 2003 viene pubblicato un articolo scientifico, “A Neural probabilistic language model”, in cui per la prima volta viene usato quel termine, ma si tratta di esperimenti che esistevano già da qualche anno prima.</br>
         Un neural language model è una rete neurale che viene addestrata per approssimare (ovvero risolvere) una funzione di language modeling: la rete neurale si modifica e si addestra in base alla funzione obiettivo che deve risolvere. Nel caso dei neural language model, la funzione obiettivo è di modellazione del linguaggio naturale. Ancora prima dell’avvento di questi utimi, avevamo i modelli di linguaggio probabilistici, che definiscono la funzione di language modeling come il calcolare la probabilità di una frase. Data una frase come insieme di parole, possiamo definire la probabilità della frase come la produttoria della probabilità di ogni singola parola date le parole precedenti. Questa probabilità è la funzione obiettivo.</br>
         Nel 2003 Youshua Benjo e altri hanno proposto per la prima volta un modello in grado di risolvere tale funzione ricorrendo all’architettura di una rete neurale, quindi addestrando una rete neurale, da qui la definizione neural probabilistic language model.</br>
-        Dal 2003 in poi ci sono stati tanti avanzamenti, nel 2013 l’introduzione di word2vec, pochi anni fa l’introduzione di transformer, l’architettura più utilizzata per lo sviluppo di modelli neurali del linguaggio allo stato dell’arte: un modello che sfrutta il meccanismo dell’attention per creare rappresentazioni contestuali delle parole e imparare le relazioni tra di esse. Quando una sequenza di input viene processata, si crea una rappresentazione che non tenga informazione solo della parola in questione, ma anche di quelle circostanti che riguardano il contesto. Per ogni token della frase influiscono nella rappresentazione anche gli altri, con pesi diversi.
+        Dal 2003 in poi ci sono stati tanti avanzamenti: nel 2013 l’introduzione di <a href="https://towardsdatascience.com/word2vec-explained-49c52b4ccb71"> word2vec</a> (rete neurale artificiale a due strati progettata per elaborare il linguaggio naturale, l'algoritmo richiede in ingresso un corpus e restituisce un insieme di vettori che rappresentano la distribuzione semantica delle parole nel testo); pochi anni fa l’introduzione di transformer, l’architettura più utilizzata per lo sviluppo di modelli neurali del linguaggio allo stato dell’arte, che sfrutta il meccanismo dell’attention per creare rappresentazioni contestuali delle parole e imparare le relazioni tra di esse. Quando una sequenza di input viene processata, si crea una rappresentazione che non tenga informazione solo della parola in questione, ma anche di quelle circostanti che riguardano il contesto. Per ogni token della frase influiscono nella rappresentazione anche gli altri, con pesi diversi.
         Queste nuove tecnologie hanno portato allo sviluppo dei modelli contestuali del linguaggio".</p> 
     </div>
   </div>
