--- a/site/index1.html
+++ b/site/index1.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
+<script type="text/javascript" src="grafici.js"></script>
  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.8.0"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
@@ -47,13 +48,13 @@
   <!-- Photo grid -->
   <div class="w3-row">
     <div class="w3-third">
-      <img src="img/dall-e7.png" onclick="onClick(this)" alt="">
+      <img src="img/dall-e7.png" onclick="onClick(this)" alt="DALL-E è un prodotto sviluppato da OpenAI">
       <img src="" onclick="onClick(this)" alt="">
       <img src="" onclick="onClick(this)" alt="">
     </div>
 
     <div class="w3-third">
-      <img src="img/dall-e8.png" onclick="onClick(this)" alt="">
+      <img src="img/dall-e8.png" onclick="onClick(this)" alt="Permette di creare immagini inserendo una stringa di testo">
       <img src="" onclick="onClick(this)" alt="">
       <img src="" onclick="onClick(this)" alt="">
     </div>
@@ -81,8 +82,12 @@
   <div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
     <span class="w3-button w3-black w3-xlarge w3-display-topright">×</span>
     <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-      <img id="img01" class="w3-image">
       <p id="caption"></p>
+      <div style="float: right">
+ 
+      </div>
+      <img id="img01" >
+      
     </div>
   </div>
  <!-- Storia section -->
@@ -144,9 +149,9 @@
     </div>
   </div>
   <div id="vis"></div>
-      <script>
+  <script> 
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "axis": {"grid": false}, "legend": {"orient": "top"}}, "data": {"name": "data-f5aa40d221b8f095fd9ec2a8cf953d4d"}, "mark": {"type": "area", "opacity": 0.1}, "encoding": {"color": {"field": "sentiment_complete", "legend": {"orient": "right"}, "scale": {"domain": ["Positivo", "Negativo", "Neutrale"], "range": ["#ADFC92", "#F44E3F", "#788BFF"]}, "title": "Sentimento registrato", "type": "nominal"}, "opacity": {"value": 0.9}, "x": {"axis": {"format": "%B %Y", "tickCount": 12, "title": "Periodo"}, "field": "date", "type": "temporal"}, "y": {"axis": {"title": "Numero di tweets"}, "field": "Value", "type": "quantitative"}}, "height": 600, "title": {"text": "Evoluzione del sentimento verso Chat GPT nell'arco dei mesi", "subtitle": "Visualizzazione dei valori relativi al dataset di Tweets"}, "width": 800, "$schema": "https://vega.github.io/schema/vega-lite/v5.8.0.json", "datasets": {"data-f5aa40d221b8f095fd9ec2a8cf953d4d": [{"date": "September 2022", "sentiment_complete": "Negativo", "Value": 64}, {"date": "October 2022", "sentiment_complete": "Negativo", "Value": 103}, {"date": "December 2022", "sentiment_complete": "Negativo", "Value": 12890}, {"date": "January 2023", "sentiment_complete": "Negativo", "Value": 21900}, {"date": "February 2023", "sentiment_complete": "Negativo", "Value": 6205}, {"date": "March 2023", "sentiment_complete": "Negativo", "Value": 3109}, {"date": "April 2023", "sentiment_complete": "Negativo", "Value": 2138}, {"date": "May 2023", "sentiment_complete": "Negativo", "Value": 1901}, {"date": "June 2023", "sentiment_complete": "Negativo", "Value": 999}, {"date": "September 2022", "sentiment_complete": "Neutrale", "Value": 101}, {"date": "October 2022", "sentiment_complete": "Neutrale", "Value": 75}, {"date": "December 2022", "sentiment_complete": "Neutrale", "Value": 26609}, {"date": "January 2023", "sentiment_complete": "Neutrale", "Value": 44188}, {"date": "February 2023", "sentiment_complete": "Neutrale", "Value": 11888}, {"date": "March 2023", "sentiment_complete": "Neutrale", "Value": 4615}, {"date": "April 2023", "sentiment_complete": "Neutrale", "Value": 3418}, {"date": "May 2023", "sentiment_complete": "Neutrale", "Value": 3131}, {"date": "June 2023", "sentiment_complete": "Neutrale", "Value": 1545}, {"date": "September 2022", "sentiment_complete": "Positivo", "Value": 114}, {"date": "October 2022", "sentiment_complete": "Positivo", "Value": 104}, {"date": "December 2022", "sentiment_complete": "Positivo", "Value": 37278}, {"date": "January 2023", "sentiment_complete": "Positivo", "Value": 67973}, {"date": "February 2023", "sentiment_complete": "Positivo", "Value": 17068}, {"date": "March 2023", "sentiment_complete": "Positivo", "Value": 7458}, {"date": "April 2023", "sentiment_complete": "Positivo", "Value": 5070}, {"date": "May 2023", "sentiment_complete": "Positivo", "Value": 4859}, {"date": "June 2023", "sentiment_complete": "Positivo", "Value": 2506}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}}, "data": {"name": "data-f5aa40d221b8f095fd9ec2a8cf953d4d"}, "mark": {"type": "line", "opacity": 0.1}, "encoding": {"color": {"field": "sentiment_complete", "legend": {"orient": "right"}, "scale": {"domain": ["Positivo", "Neutrale", "Negativo"], "range": ["#ADFC92", "#788BFF", "#F44E3F"]}, "title": "Sentimento registrato", "type": "nominal"}, "opacity": {"value": 0.9}, "x": {"axis": {"format": "%B %Y", "tickCount": 12, "title": "Periodo"}, "field": "date", "type": "temporal"}, "y": {"axis": {"title": "Numero di tweets"}, "field": "Value", "type": "quantitative"}}, "height": 600, "title": {"text": "Evoluzione del sentimento verso Chat GPT nell'arco dei mesi", "subtitle": "Visualizzazione dei valori relativi al dataset di Tweets"}, "width": 800, "$schema": "https://vega.github.io/schema/vega-lite/v5.8.0.json", "datasets": {"data-f5aa40d221b8f095fd9ec2a8cf953d4d": [{"date": "September 2022", "sentiment_complete": "Negativo", "Value": 64}, {"date": "October 2022", "sentiment_complete": "Negativo", "Value": 103}, {"date": "December 2022", "sentiment_complete": "Negativo", "Value": 12890}, {"date": "January 2023", "sentiment_complete": "Negativo", "Value": 21900}, {"date": "February 2023", "sentiment_complete": "Negativo", "Value": 6205}, {"date": "March 2023", "sentiment_complete": "Negativo", "Value": 3109}, {"date": "April 2023", "sentiment_complete": "Negativo", "Value": 2138}, {"date": "May 2023", "sentiment_complete": "Negativo", "Value": 1901}, {"date": "June 2023", "sentiment_complete": "Negativo", "Value": 999}, {"date": "September 2022", "sentiment_complete": "Neutrale", "Value": 101}, {"date": "October 2022", "sentiment_complete": "Neutrale", "Value": 75}, {"date": "December 2022", "sentiment_complete": "Neutrale", "Value": 26609}, {"date": "January 2023", "sentiment_complete": "Neutrale", "Value": 44188}, {"date": "February 2023", "sentiment_complete": "Neutrale", "Value": 11888}, {"date": "March 2023", "sentiment_complete": "Neutrale", "Value": 4615}, {"date": "April 2023", "sentiment_complete": "Neutrale", "Value": 3418}, {"date": "May 2023", "sentiment_complete": "Neutrale", "Value": 3131}, {"date": "June 2023", "sentiment_complete": "Neutrale", "Value": 1545}, {"date": "September 2022", "sentiment_complete": "Positivo", "Value": 114}, {"date": "October 2022", "sentiment_complete": "Positivo", "Value": 104}, {"date": "December 2022", "sentiment_complete": "Positivo", "Value": 37278}, {"date": "January 2023", "sentiment_complete": "Positivo", "Value": 67973}, {"date": "February 2023", "sentiment_complete": "Positivo", "Value": 17068}, {"date": "March 2023", "sentiment_complete": "Positivo", "Value": 7458}, {"date": "April 2023", "sentiment_complete": "Positivo", "Value": 5070}, {"date": "May 2023", "sentiment_complete": "Positivo", "Value": 4859}, {"date": "June 2023", "sentiment_complete": "Positivo", "Value": 2506}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
@@ -162,6 +167,7 @@
         .catch(error => showError(el, error));
     })(vegaEmbed);
   </script>
+  
 
   <!-- Parole e tendenze section -->
   <div class="w3-container w3-dark-grey w3-padding-32 w3-text-light-grey w3-padding-large" id="contact">
