--- a/site/index1.html
+++ b/site/index1.html
@@ -272,8 +272,8 @@
       <p>L'analisi condotta dal nostro gruppo si è articolata in tre fasi:
         <ul>
           <li>Ricerca dei dati (scraping)</li>
-          <li>Analisi attraverso la costruzione dei dataset e l'utilizzo di librerie per </li>
-          <li></li>
+          <li>Analisi attraverso la costruzione dei dataset e l'utilizzo di librerie per l'indagine sul testo estratto</li>
+          <li>Realizzazione dei grafici per <i>visualizzare</i> i risultati ottenuti</li>
         </ul>
       </p>
       <h2 id="sez6">Risultati sull'analisi</h2>
