Fix graph selector and some updates

--- a/site/index.html
+++ b/site/index.html
@@ -277,11 +277,26 @@
       </p>
       <h2 id="sez6">Risultati sull'analisi</h2>
 
-      <div id="graphics-container">
-        <button id="graphics1-btn">Grafico 1</button>
-        <button id="graphics2-btn">Grafico 2</button>
-        <button id="graphics3-btn">Grafico 3</button>
+      <div class="graphics-btn-container-sentiment">
+        <button id="graphics1-btn-sentiment">Sentimento su Reddit</button>
+        <button id="graphics2-btn-sentiment">Sentimento su Twitter.it</button>
+        <button id="graphics3-btn-sentiment">Sentimento su Twitter.com</button>
       </div>
+      <div id="graphics-container-sentiment" class="chartContainer"></div>
+
+      <div class="graphics-btn-container-">
+        <button id="graphics1-btn-">Grafico 1</button>
+        <button id="graphics2-btn-">Grafico 2</button>
+        <button id="graphics3-btn-">Grafico 3</button>
+      </div>
+      <div id="graphics-container-" class="chartContainer"></div>
+
+      <div class="graphics-btn-container-">
+        <button id="graphics1-btn-">Grafico 1</button>
+        <button id="graphics2-btn-">Grafico 2</button>
+        <button id="graphics3-btn-">Grafico 3</button>
+      </div>
+      <div id="graphics-container-" class="chartContainer"></div>
 
     </div>
   </div>
